--- a/index.html
+++ b/index.html
@@ -5,12 +5,92 @@
   <title>Excel-Based MCQ Quiz</title>
   <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
   <style>
-    body { font-family: Arial; padding: 20px; background: #f9f9f9; }
-    .question-box { margin: 20px 0; padding: 20px; background: white; border-radius: 10px; box-shadow: 0 0 10px #ddd; }
-    .option { margin: 5px 0; }
-    button { margin-top: 10px; padding: 10px 15px; border: none; border-radius: 5px; background-color: #007bff; color: white; cursor: pointer; }
-    button:hover { background-color: #0056b3; }
-    #result { font-weight: bold; font-size: 1.2em; margin-top: 20px; }
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      padding: 40px;
+      background: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+      color: #333;
+    }
+
+    h2 {
+      text-align: center;
+      color: #2c3e50;
+    }
+
+    input[type="file"] {
+      display: block;
+      margin: 20px auto;
+      padding: 10px;
+      border: 2px dashed #2c3e50;
+      border-radius: 10px;
+      background: #fff;
+      cursor: pointer;
+    }
+
+    .question-box {
+      margin: 20px auto;
+      padding: 20px;
+      background: #ffffffcc;
+      border-radius: 20px;
+      max-width: 700px;
+      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease-in-out;
+    }
+
+    .question-box.correct {
+      border: 3px solid #2ecc71;
+    }
+
+    .question-box.incorrect {
+      border: 3px solid #e74c3c;
+    }
+
+    .option {
+      margin: 10px 0;
+      padding: 10px;
+      border-radius: 10px;
+      background-color: #f1f1f1;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .option.correct {
+      background-color: #2ecc71;
+      color: white;
+    }
+
+    .option.incorrect {
+      background-color: #e74c3c;
+      color: white;
+    }
+
+    button {
+      display: block;
+      margin: 30px auto;
+      padding: 15px 30px;
+      font-size: 1em;
+      border: none;
+      border-radius: 30px;
+      background: #6a11cb;
+      background: linear-gradient(to right, #2575fc, #6a11cb);
+      color: white;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+    }
+
+    #result {
+      text-align: center;
+      font-size: 1.5em;
+      margin-top: 30px;
+      font-weight: 600;
+      color: #2c3e50;
+    }
   </style>
 </head>
 <body>
@@ -39,17 +119,18 @@
 
     function showQuiz() {
       const container = document.getElementById('quizContainer');
-      container.innerHTML = ''; // Clear previous content
+      container.innerHTML = '';
 
       questions.forEach((q, index) => {
         const box = document.createElement('div');
         box.className = 'question-box';
+        box.id = `qbox-${index}`;
         box.innerHTML = `
           <div><strong>Q${index + 1}:</strong> ${q['Question']}</div>
-          <div class="option"><input type="radio" name="q${index}" value="A"> A. ${q['Option A']}</div>
-          <div class="option"><input type="radio" name="q${index}" value="B"> B. ${q['Option B']}</div>
-          <div class="option"><input type="radio" name="q${index}" value="C"> C. ${q['Option C']}</div>
-          <div class="option"><input type="radio" name="q${index}" value="D"> D. ${q['Option D']}</div>
+          <div class="option" data-opt="A"><input type="radio" name="q${index}" value="A"> A. ${q['Option A']}</div>
+          <div class="option" data-opt="B"><input type="radio" name="q${index}" value="B"> B. ${q['Option B']}</div>
+          <div class="option" data-opt="C"><input type="radio" name="q${index}" value="C"> C. ${q['Option C']}</div>
+          <div class="option" data-opt="D"><input type="radio" name="q${index}" value="D"> D. ${q['Option D']}</div>
         `;
         container.appendChild(box);
       });
@@ -62,14 +143,32 @@
 
     function gradeQuiz() {
       let score = 0;
+
       questions.forEach((q, index) => {
         const selected = document.querySelector(`input[name="q${index}"]:checked`);
-        if (selected && selected.value === q['Correct Answer']) {
+        const correctAnswer = q['Correct Answer'];
+        const box = document.getElementById(`qbox-${index}`);
+        const options = box.querySelectorAll('.option');
+
+        options.forEach(opt => {
+          const optVal = opt.getAttribute('data-opt');
+          if (optVal === correctAnswer) {
+            opt.classList.add('correct');
+          }
+          if (selected && selected.value === optVal && selected.value !== correctAnswer) {
+            opt.classList.add('incorrect');
+          }
+        });
+
+        if (selected && selected.value === correctAnswer) {
           score++;
+          box.classList.add('correct');
+        } else {
+          box.classList.add('incorrect');
         }
       });
 
-      document.getElementById('result').textContent = `Your Score: ${score} / ${questions.length}`;
+      document.getElementById('result').textContent = `You got ${score} out of ${questions.length} correct!`;
     }
   </script>
 
